--- a/HTML/login.html
+++ b/HTML/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Style/login.css" >
 	<link rel="stylesheet" href="{{ url_for('Style', path='login.css') }}" >
-    <title>Document</title>
+    <title>Login</title>
 </head>
 <body>
 
@@ -22,7 +22,7 @@
                 
                 <label for="password"><b>Password</b></label>
                 <input type="password" placeholder="Enter Password" name="password" required>
-                    
+                <a class="register" href="/register">register here</a>
                 <button type="submit">Login</button>
             </div>
         </form>
