--- a/HTML/community.html
+++ b/HTML/community.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Steam Community</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../Style/community.css">
+	<title>Steam Community</title>
 </head>
 <body>
 	{% include "/Templates/navbar.html" %}
@@ -14,7 +14,7 @@
 			{% include "/Templates/community_bar.html" %}
 		</div>
 		<div class="post_container">
-			{% for post in board.get_post() %}
+			{% for post in board.get_all_post() %}
 				{% include "/Templates/community_display.html" %}
 			{% endfor %}
 		</div>
