--- a/HTML/library.html
+++ b/HTML/library.html
@@ -11,7 +11,7 @@
         {% include "Templates/navbar.html" %}
 
         <ul>
-            {% for product in user.get_library().get_products() %}
+            {% for product in user.get_library().get_all_products() %}
             {% set product_info = product.get_info() %}
             <li><a>{{ product_info["name"] }}</a></li>
             {% endfor %}
@@ -26,7 +26,7 @@
             <span>ALL GAMES</span>
             <div class="box2">
 
-                {% for item in user.get_library().get_products() %}
+                {% for item in user.get_library().get_all_products() %}
                 {% set product = item.get_info() %}
                 {% include "Templates/simple_block.html" %}
                 {% endfor %}
