--- a/HTML/product.html
+++ b/HTML/product.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My Steam-like Website</title>
+	<title>Product</title>
 	<link rel="stylesheet" href="../Style/product.css" >
 	<link rel="stylesheet" href="{{ url_for('Style', path='product.css') }}" >
   <link rel="icon" type="image/png" href="../Icon/favicon.png">
@@ -14,20 +14,23 @@
     <!--============================================================= Showcase ============================================================= -->
     <!--============================================================= Showcase ============================================================= -->
     <!--============================================================= Showcase ============================================================= -->
-		<h2>{{ product["name"] }}</h2>
+		<h2>{{ product.get_name() }}</h2>
     <div class="showcase">
       <div class="gallery">
         <div class="vid">
-          <iframe src="{{product['pre_vid']}}" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          	<iframe src="{{ product.get_preview_vid() }}" title="YouTube video player" 
+			allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+			allowfullscreen>
+		</iframe>
         </div>
         <div class="pic"></div>
       </div>
       <div class="descriptions">
         <div class="cover">
-          <img src="{{ product['cover_image'] }}">
+          <img src="{{ product.get_cover() }}">
         </div>
         <div class="description"> 
-          {{ product["description"] }}
+          {{ product.get_description() }}
         </div>
         <div class="review"></div>
         <div class="tags"></div>
@@ -42,12 +45,14 @@
     <!--============================================================= Buy Tab ============================================================= -->
     <!--============================================================= Buy Tab ============================================================= -->
     <div class="buytab">
-      <h3>Play {{ product["name"] }}</h3>
-      <form class="addtocart" action="/add_to_cart/{{ product['id'] }}" method="post">
-        <div class="prod price">{{ product["price"] * product["discount"] }} THB</div>
-        <div class="prod discount">-{{  100 * product["discount"] }}%</div>
-        {% if product not in user.get_cart().get_products() %}
-        <button type="submit" class="prod addbtn">Add to cart</button>
+      <h3>Play {{ product.get_name() }}</h3>
+      <form class="addtocart" action="/add_to_cart/{{ product.get_id() }}" method="post">
+        <div class="prod price">{{ product.get_discounted_price() }} THB</div>
+        <div class="prod discount">-{{  100 * product.get_discount() }}%</div>
+        {% if addable %}
+          <button type="submit" class="prod addbtn green_addbtn">Add to cart</button>
+        {% else %}
+          <button class="prod addbtn grey_addbtn" disabled>Add to cart</button>
         {% endif %}
       </form>
     </div>
