--- a/HTML/library.html
+++ b/HTML/library.html
@@ -11,7 +11,7 @@
         {% include "Templates/navbar.html" %}
 
         <ul>
-            {% for product in user.get_library().get_all_products() %}
+            {% for product in current_user.get_library().get_all_products() %}
             {% set product_info = product.get_info() %}
             <li><a href="/product/{{ product_info["id"] }}">{{ product_info["name"] }}</a></li>
             {% endfor %}
@@ -25,12 +25,10 @@
             </div>
             <span>ALL GAMES</span>
             <div class="box2">
-
-                {% for item in user.get_library().get_all_products() %}
+                {% for item in current_user.get_library().get_all_products() %}
                 {% set product = item.get_info() %}
                 {% include "Templates/simple_block.html" %}
                 {% endfor %}
-
             </div>
         </div>
     </body>
