--- a/HTML/order_history.html
+++ b/HTML/order_history.html
@@ -31,7 +31,7 @@
                 <div>Zip or postal code: {{ order.get_shipping_detail("postal_code") }}</div>
                 <div>Phone number: {{ order.get_shipping_detail("phone_number") }}</div>
             </div>
-            <br><a href="/purchase_history/{{ user.get_id() }}"><button>back</button></a>
+            <br><a href="/purchase_history/{{ current_user.get_id() }}"><button>back</button></a>
         </div>
     </body>
 </html>
