--- a/HTML/product.html
+++ b/HTML/product.html
@@ -46,7 +46,7 @@
     <!--============================================================= Buy Tab ============================================================= -->
     <div class="buytab">
       <h3>Play {{ product.get_name() }}</h3>
-      <form class="addtocart" action="/add_to_cart/{{ product.get_id() }}" method="post">
+      <form class="addtocart" action="/add_to_cart/{{ product.get_id() }}" method="get">
         <div class="prod price">{{ product.get_discounted_price() }} THB</div>
         <div class="prod discount">-{{  100 * product.get_discount() }}%</div>
         {% if addable %}
