<feat>: user get level on profile

--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -18,7 +18,7 @@
                 <div class="level_container">
                     <div class="level_info_container">
                         <h2>Level</h2>
-                        <div class="level">9</div>
+                        <div class="level">{{ user.get_level() }}</div>
                     </div>
                     <div class="show_achieve_ment"></div>
                     {% if own_profile %}
