<fix>: update discounted_price

--- a/HTML/cart.html
+++ b/HTML/cart.html
@@ -28,7 +28,7 @@
                     </div>
 
                     <div class="prod_price_container">
-                        <div class="price">{{ product.get_price() }}</div>
+                        <div class="price">{{ product.get_discounted_price() }}</div>
                         <a href="/remove_from_cart/{{ current_user.get_id() }}/{{ product.get_id() }}">Delete</a>
                     </div>
                     {% endfor %}
