--- a/HTML/purchase_history.html
+++ b/HTML/purchase_history.html
@@ -20,7 +20,7 @@
             <div class="each-order">
                 <div>date: {{ order.get_paid_date() }}</div>
                 {% for product in order.get_products() %}
-                <div>name: {{ product.get_name() }}, price: {{ product.get_price() }} B</div>
+                <div>name: {{ product.get_name() }}, price: {{ product.get_discounted_price() }} B</div>
                 {% endfor %}
                 <div>total: {{ order.get_total_cost() }} B</div>
                 <a class="view_detail" href="/order_history/{{ order.get_id() }}">view billing address</a>
