<feat>: add wish_list display

--- a/HTML/product.html
+++ b/HTML/product.html
@@ -55,6 +55,7 @@
           <button class="prod addbtn grey_addbtn" disabled>Add to cart</button>
         {% endif %}
       </form>
+      <div class="to_wishlist">Add to wishlist</div>
     </div>
     <!--============================================================= Sys req ============================================================= -->
     <!--============================================================= Sys req ============================================================= -->
